syntax = "proto3";
package prism.treasury;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "prism/treasury/action.proto";
import "prism/treasury/flow_trade.proto";

option go_package = "github.com/prism-finance/prism-core/x/treasury/types";

message EventTreasuryCollectFee {
  string fee_type = 1;
  string amount = 2;
  string from = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message EventCreateFlowForAmount {
  uint64 flow_id = 1;
  ActionType action_type = 2;
  cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
}

message EventExecuteActionForAmount {
  ActionType action_type = 1;
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

message EventSetAction {
  Action action = 1 [(gogoproto.nullable) = false];
}

message EventSetFlowTrade {
  FlowTrade flow_trade = 1 [(gogoproto.nullable) = false];
}

message EventRemoveFlowTrade {
  google.protobuf.Timestamp end_time = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
  uint64 flow_id = 2;
}
